unavailable product out of stock button fix color contrast

--- a/style/_about.scss
+++ b/style/_about.scss
@@ -72,7 +72,8 @@
             opacity: 40%;
 
             button {
-                background: $dark-gray;
+                // background: $dark-gray;
+                background: #595959;
             }
         }
     }
@@ -113,7 +114,7 @@
                     cursor: default;
 
                     &:hover {
-                        background: $dark-gray;
+                        background: #595959;
                     }
                 }
             }
